--- a/README
+++ b/README
@@ -21,3 +21,21 @@ We are relying on the [GitHub issues tracker][issues] linked from above for
 feedback. File bugs or other issues [here][issues].
 
 [issues]: http://github.com/beechannels/beechat/issues
+
+Changes
+-------
+
+August 9th, 2010
+
+- cooked js doesn't cook tokens or languages (separated now to another file)
+- db data now can be set from the admin panel
+- users can disable the chat in their settings
+- migrate.php added that will make the initial sync
+- make the get roster js action asynchronous
+- fix buddy list issue when changing page
+- fix security issues (XSS)
+
+Thanks
+------
+
+We'd like to thank Pablo Martin ( http://github.com/caedesvvv ) and Benjamin H. Graham ( http://github.com/bhgraham ) for their help on Beechat.
